--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Instructions</h1>
         <p>1. Use clear data button to clear all the input from display and storage.<br>
            2. Use load test data button to load a sample test data.<br>
-           3. Use choose file button to load data from *.json file. Several input example files are also provided in the repository.
+           3. Use choose file button to select an input *.json file. Several input example files are also provided in the repository.
               Use add data button to load the data from the input file. <br>
            4. Alternatively, one may also use Add vertex and Add edge buttons to directly input the coordinates 
             and connectivity. Note: the connectivity is provided with 0 based index.<br>
